Changed API of building data virtualizing collections

--- a/BFF.DataVirtualizingCollection/BFF.DataVirtualizingCollection.csproj
+++ b/BFF.DataVirtualizingCollection/BFF.DataVirtualizingCollection.csproj
@@ -1,21 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>BFF.DataVirtualizingCollection</PackageId>
-    <PackageVersion>1.1.1</PackageVersion>
+    <PackageVersion>1.2.0</PackageVersion>
     <Authors>Dimitri Enns</Authors>
     <Description>This is an approach to data virtualizing collections intended to be used in WPF projects.</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>Updating to System.Reactive to version 4.0. 
-      This required to raise the .NetStandard version of this project to 2.0. 
-      If this is a problem for you, please contact me. I might rollback in future releases.</PackageReleaseNotes>
+    <PackageReleaseNotes>Changed the API for building data virtualized collections</PackageReleaseNotes>
     <Copyright>Copyright 2017 (c) Dimitri Enns. All rights reserved.</Copyright>
     <PackageTags>data-virtualization wpf csharp</PackageTags>
-    <Version>1.1.1</Version>
+    <Version>1.2.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>1.1.1.0</AssemblyVersion>
-    <FileVersion>1.1.1.0</FileVersion>
+    <AssemblyVersion>1.2.0.0</AssemblyVersion>
+    <FileVersion>1.2.0.0</FileVersion>
     <PackageProjectUrl>https://github.com/Yeah69/BFF.DataVirtualizingCollection</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Yeah69/BFF.DataVirtualizingCollection.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
