--- a/BFF.DataVirtualizingCollection.Sample/packages.config
+++ b/BFF.DataVirtualizingCollection.Sample/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LambdaConverters" version="3.0.0" targetFramework="net472" />
+  <package id="MahApps.Metro.IconPacks.Material" version="3.0.0-alpha0134" targetFramework="net472" />
   <package id="Microsoft.Data.Sqlite" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Data.Sqlite.Core" version="2.1.0" targetFramework="net472" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.11" targetFramework="net472" />
