--- a/BFF.DataVirtualizingCollection/BFF.DataVirtualizingCollection.csproj
+++ b/BFF.DataVirtualizingCollection/BFF.DataVirtualizingCollection.csproj
@@ -3,20 +3,22 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>BFF.DataVirtualizingCollection</PackageId>
-    <PackageVersion>1.2.4</PackageVersion>
+    <PackageVersion>1.3.0</PackageVersion>
     <Authors>Dimitri Enns</Authors>
     <Description>This is an approach to data virtualizing collections intended to be used in WPF projects.</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageReleaseNotes>Putting back the implementations of IList, because else controls like DataGrid wouldn't support it.</PackageReleaseNotes>
-    <Copyright>Copyright 2017 (c) Dimitri Enns. All rights reserved.</Copyright>
+    <Copyright></Copyright>
     <PackageTags>data-virtualization wpf csharp</PackageTags>
-    <Version>1.2.4</Version>
+    <Version>1.3.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>1.2.4.0</AssemblyVersion>
-    <FileVersion>1.2.4.0</FileVersion>
+    <AssemblyVersion>1.3.0.0</AssemblyVersion>
+    <FileVersion>1.3.0.0</FileVersion>
     <PackageProjectUrl>https://github.com/Yeah69/BFF.DataVirtualizingCollection</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Yeah69/BFF.DataVirtualizingCollection.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
+    <PackageIconUrl>https://raw.githubusercontent.com/Yeah69/BFF.DataVirtualizingCollection/master/Icon/Yeah69Logo.ico</PackageIconUrl>
+    <PackageLicenseExpression />
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
