Removed Builders for data-virtualizing collections

--- a/BFF.DataVirtualizingCollection/BFF.DataVirtualizingCollection.csproj
+++ b/BFF.DataVirtualizingCollection/BFF.DataVirtualizingCollection.csproj
@@ -20,6 +20,7 @@
     <PackageIconUrl>https://raw.githubusercontent.com/Yeah69/BFF.DataVirtualizingCollection/master/Icon/Yeah69Logo.ico</PackageIconUrl>
     <PackageLicenseExpression />
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
