Upgraded to C#8, nullable reference types, .Net Standard 2.1 and .Net Core 3.0

--- a/BFF.DataVirtualizingCollection.Test/BFF.DataVirtualizingCollection.Test.csproj
+++ b/BFF.DataVirtualizingCollection.Test/BFF.DataVirtualizingCollection.Test.csproj
@@ -1,11 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
 
     <LangVersion>8</LangVersion>
+    <Nullable>enable</Nullable>
+    <WarningsAsErrors>CS8600;CS8602;CS8603;CS8604;CS8625</WarningsAsErrors>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
