Fixed bugs for sliding window and extended sample for HandyControl

--- a/BFF.DataVirtualizingCollection.Sample.HandyControl/BFF.DataVirtualizingCollection.Sample.HandyControl.csproj
+++ b/BFF.DataVirtualizingCollection.Sample.HandyControl/BFF.DataVirtualizingCollection.Sample.HandyControl.csproj
@@ -90,6 +90,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="INotifyPropertyChangedExtensions.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="RxRelayCommand.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
