Restructured solutions and test projects

--- a/BFF.DataVirtualizingCollection.UnitTests/BFF.DataVirtualizingCollection.UnitTests.csproj
+++ b/BFF.DataVirtualizingCollection.UnitTests/BFF.DataVirtualizingCollection.UnitTests.csproj
@@ -1,13 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
 
     <LangVersion>8</LangVersion>
     <Nullable>enable</Nullable>
     <WarningsAsErrors>CS8600;CS8602;CS8603;CS8604;CS8625</WarningsAsErrors>
+    <OutputType>Library</OutputType>
+    <RootNamespace>BFF.DataVirtualizingCollection.Test</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
