--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -8,8 +8,17 @@ on:
 
 jobs:
   ubuntu:
+    
+    strategy:
+      matrix:
+        configuration: [Debug, Release]
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # For a list of available runner types, refer to 
+                             # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
+
+    env:
+      Solution_Name: BFF.DataVirtualizingCollection.sln                        # Replace with your solution name, i.e. MyWpfApp.sln.
+      Test_Project_Path: BFF.DataVirtualizingCollection.UnitTests\BFF.DataVirtualizingCollection.UnitTests.csproj                # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
 
     steps:
     - uses: actions/checkout@v2
@@ -25,9 +34,16 @@ jobs:
       run: dotnet test --no-restore --verbosity normal
 
   windows:
-
+    
+    strategy:
+      matrix:
+        configuration: [Debug, Release]
     runs-on: windows-latest
 
+    env:
+      Solution_Name: BFF.DataVirtualizingCollection.sln                        # Replace with your solution name, i.e. MyWpfApp.sln.
+      Test_Project_Path: BFF.DataVirtualizingCollection.UnitTests\BFF.DataVirtualizingCollection.UnitTests.csproj                # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
+      
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET Core
@@ -44,8 +60,17 @@ jobs:
 
   macos:
 
+    strategy:
+      matrix:
+        configuration: [Debug, Release]
+    
+  
     runs-on: macos-latest
 
+    env:
+      Solution_Name: BFF.DataVirtualizingCollection.sln                        # Replace with your solution name, i.e. MyWpfApp.sln.
+      Test_Project_Path: BFF.DataVirtualizingCollection.UnitTests\BFF.DataVirtualizingCollection.UnitTests.csproj                # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
+      
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET Core
