--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -7,32 +7,6 @@ on:
     branches: [ master, develop ]
 
 jobs:
-  ubuntu:
-    
-    strategy:
-      matrix:
-        configuration: [Debug, Release]
-
-    runs-on: ubuntu-latest  # For a list of available runner types, refer to 
-                             # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
-
-    env:
-      Solution_Name: BFF.DataVirtualizingCollection.sln                        # Replace with your solution name, i.e. MyWpfApp.sln.
-      Test_Project_Path: BFF.DataVirtualizingCollection.UnitTests\BFF.DataVirtualizingCollection.UnitTests.csproj                # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 3.1.101
-    - name: Install dependencies
-      run: dotnet restore ./BFF.DataVirtualizingCollection.sln
-    - name: Build
-      run: dotnet build ./BFF.DataVirtualizingCollection.sln --configuration Release --no-restore
-    - name: Test
-      run: dotnet test ./BFF.DataVirtualizingCollection.UnitTests/BFF.DataVirtualizingCollection.UnitTests.csproj --no-restore --verbosity normal
-
   windows:
     
     strategy:
@@ -46,6 +20,7 @@ jobs:
       
     steps:
     - uses: actions/checkout@v2
+    - run: set DOTNET_CLI_TELEMETRY_OPTOUT=1
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
@@ -56,30 +31,3 @@ jobs:
       run: dotnet build .\BFF.DataVirtualizingCollection.sln --configuration Release --no-restore
     - name: Test
       run: dotnet test .\BFF.DataVirtualizingCollection.UnitTests\BFF.DataVirtualizingCollection.UnitTests.csproj --no-restore --verbosity normal
-
-
-  macos:
-
-    strategy:
-      matrix:
-        configuration: [Debug, Release]
-    
-  
-    runs-on: macos-latest
-
-    env:
-      Solution_Name: BFF.DataVirtualizingCollection.sln                        # Replace with your solution name, i.e. MyWpfApp.sln.
-      Test_Project_Path: BFF.DataVirtualizingCollection.UnitTests\BFF.DataVirtualizingCollection.UnitTests.csproj                # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
-      
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 3.1.101
-    - name: Install dependencies
-      run: dotnet restore ./BFF.DataVirtualizingCollection.sln
-    - name: Build
-      run: dotnet build ./BFF.DataVirtualizingCollection.sln --configuration Release --no-restore
-    - name: Test
-      run: dotnet test ./BFF.DataVirtualizingCollection.UnitTests/BFF.DataVirtualizingCollection.UnitTests.csproj --no-restore --verbosity normal
