--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -31,3 +31,8 @@ jobs:
       run: dotnet build .\BFF.DataVirtualizingCollection.sln --configuration Release --no-restore
     - name: Test
       run: dotnet test .\BFF.DataVirtualizingCollection.UnitTests\BFF.DataVirtualizingCollection.UnitTests.csproj --no-restore --verbosity normal
+    - name: Publish to NuGet
+      uses: brandedoutcast/publish-nuget@v2
+      with:
+        PROJECT_FILE_PATH: BFF.DataVirtualizingCollection/BFF.DataVirtualizingCollection.csproj
+        NUGET_KEY: ${{secrets.NUGET_API_KEY}}
