--- a/BFF.DataVirtualizingCollection.IntegrationTests/BFF.DataVirtualizingCollection.IntegrationTests.csproj
+++ b/BFF.DataVirtualizingCollection.IntegrationTests/BFF.DataVirtualizingCollection.IntegrationTests.csproj
@@ -11,6 +11,10 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+      <PackageReference Include="MinVer" Version="2.3.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="morelinq" Version="3.3.2" />
       <PackageReference Include="NSubstitute" Version="4.2.1" />
       <PackageReference Include="xunit" Version="2.4.1" />
