--- a/BFF.DataVirtualizingCollection.Sample.Persistence.Proxy/BFF.DataVirtualizingCollection.Sample.Persistence.Proxy.csproj
+++ b/BFF.DataVirtualizingCollection.Sample.Persistence.Proxy/BFF.DataVirtualizingCollection.Sample.Persistence.Proxy.csproj
@@ -10,6 +10,10 @@
 
     <ItemGroup>
       <PackageReference Include="Autofac" Version="5.1.2" />
+      <PackageReference Include="MinVer" Version="2.3.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
 </Project>
