--- a/BFF.DataVirtualizingCollection.Sample.Persistence/BFF.DataVirtualizingCollection.Sample.Persistence.csproj
+++ b/BFF.DataVirtualizingCollection.Sample.Persistence/BFF.DataVirtualizingCollection.Sample.Persistence.csproj
@@ -11,6 +11,10 @@
     <ItemGroup>
       <PackageReference Include="Autofac" Version="5.1.2" />
       <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.3" />
+      <PackageReference Include="MinVer" Version="2.3.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
