--- a/BFF.DataVirtualizingCollection.Sample.ViewModel/BFF.DataVirtualizingCollection.Sample.ViewModel.csproj
+++ b/BFF.DataVirtualizingCollection.Sample.ViewModel/BFF.DataVirtualizingCollection.Sample.ViewModel.csproj
@@ -11,6 +11,10 @@
 
     <ItemGroup>
       <PackageReference Include="Autofac" Version="5.1.2" />
+      <PackageReference Include="MinVer" Version="2.3.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="System.Reactive" Version="4.4.1" />
     </ItemGroup>
 
