--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -36,4 +36,5 @@ jobs:
       with:
         PROJECT_FILE_PATH: BFF.DataVirtualizingCollection/BFF.DataVirtualizingCollection.csproj
         VERSION_FILE_PATH: Directory.Build.props
+        TAG_COMMIT: false
         NUGET_KEY: ${{secrets.NUGET_API_KEY}}
