--- a/.github/workflows/onVersionTag.yml
+++ b/.github/workflows/onVersionTag.yml
@@ -5,7 +5,7 @@ name: OnVersionTag
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  push:
+  create:
     tags:
       - 'v*'
 jobs:
